2004-04-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/Makefile.am:
  - Renamed config.h.in to internalconfig.h.in
 include/pqxx/compiler.h:
  - Renamed config.h to internalconfig.h to avoid confusion
 include/pqxx/config.h.in:
  - Deleted
 include/pqxx/internalconfig.h.in:
  - New
 include/pqxx/libconfig.h.in:
  - Removed some macros not used in library headers
 test/test045.cxx:
  - Quelled compiler warning
 test/test049.cxx:
  - Include internalconfig.h instead of libconfig.h
2004-04-05  Roger Leigh <rleigh@debian.org>
 tools/Makefile.am:
  - Add $(top_builddir)/include to INCLUDES.
2004-04-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.hxx, include/pqxx/connection_base.hxx:
  - Made dropconnect() throw ()
2004-03-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Added missing include <locale>, thanks darx@darxi.purk.ee
2004-03-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Replaced field_streambuf::underflow()
  - May fix problems with various compilers when reading strings from fields
2004-03-21  Roger Leigh <rleigh@debian.org>
 test/Makefile.am, tools/maketestam.pl
  - Correct includes and libs search paths.
  - VPATH builds now work.
 tools/Makefile.am
  - Don't try to install pqxxbench and rmlo.
2004-03-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libconfig.h.in, include/pqxx/util.hxx, src/util.cxx:
  - Moved PQfreemem() and PQfreeNotify() calls out of header
  - Moved PQXX_HAVE_PQFREEMEM and PQXX_HAVE_PQFREENOTIFY out of header
  - Moved PQXX_HAVE_PQFREE* out of libconfig.h
 include/pqxx/result.hxx:
  - to_string() and from_string() templates for result::field
 include/pqxx/util.hxx, test/test*.cxx:
  - Test coverage for from_string() functions
  - Test coverage for to_string() functions
 test/test076.cxx:
  - New
  - Completes test coverage for from_string() and to_string()
 test/test077.cxx:
  - New
  - Tests result::swap()
2004-03-14  Jeroen T. Vermeulen <jtv@xs4all.nl>