@@ -16,6 +16,7 @@
  *
  *-------------------------------------------------------------------------
  */
+#include <ios>
 #include <stdexcept>
 
 #include "pqxx/util"
